# gwi

./: AmplificationPlot.qml  Analysis.qml  CMakeLists.txt  DataManager.js  END.qml  IntensitySlider.qml  Main.qml  README.md  RawData.qml  Run.qml  Setup.qml  SetupPage.qml  StandardCurve.qml  Summary.qml  main.cpp
include/: ButtonHandler.hpp  DataManager.hpp  ExperimentModel.hpp  HardwareController.hpp  RawDataModel.hpp  RunButtonlEventFilter.hpp  SliderHandler.hpp  StandardCurveModel.hpp  StateManager.hpp
resources/: example.yml  latest_data.yml  resources.qrc
resources/experiments/: first_experiment.yml  new_experiment.yml  second_experiment.yml
resources/templates/: empty_experiment.yml  example.yml  first_experiment.yml  second_experiment.yml  third_experiment.yml
src/: ButtonHandler.cpp  DataManager.cpp  ExperimentModel.cpp  HardwareController.cpp  RawDataModel.cpp  RunButtonlEventFilter.cpp  SliderHandler.cpp  StandardCurveModel.cpp  StateManager.cpp  main.cpp
